# personas

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/persona_sim/: __init__.py
src/persona_sim/api/: __init__.py  dependencies.py  deps.py
src/persona_sim/api/routes/: health.py  simulations.py
src/persona_sim/app/: main.py
src/persona_sim/core/: config.py  logging.py
src/persona_sim/db/: __init__.py  engine.py  migrations.md  models.py  session.py
src/persona_sim/db/models/: __init__.py  simulation.py
src/persona_sim/db/repositories/: __init__.py  sim_repo.py
src/persona_sim/schemas/: __init__.py  eval.py  persona.py  persona_response.py  scenario.py  sim_state.py  stimulus.py  system.py  transcript.py
src/persona_sim/sim/: __init__.py  agents.py  errors.py  evaluator.py  graph.py  heuristics.py  prompts.py  service.py
src/persona_sim/sim/graph/: __init__.py  graph.py  nodes.py  state.py
src/persona_sim/sim/llm/: __init__.py  client.py  structured.py
src/persona_sim/sim/prompts/: __init__.py  eval_prompts.py  persona_prompts.py
src/personas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_health.py  test_heuristics.py  test_llm.py  test_prompts.py  test_sim_repo.py  test_sim_service.py  test_simulation_graph.py  test_simulations_api.py
