[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personas"
version = "0.1.0"
description = "Persona simulation backend MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Persona Sim Team" }]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.1",
    "pydantic-settings==2.4.0",
    "langchain==0.2.11",
    "langgraph==0.2.21",
    "sqlalchemy==2.0.32",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "tenacity==8.5.0",
    "structlog==24.4.0",
    "httpx==0.27.2",
    "langchain-openai==0.1.23",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "ruff==0.6.1",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["persona_sim*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
plugins = []
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
